move post-hover-overlay style to external; fixup some image overlay alignment issues in IE7 due to img being set to vertical-align: center
--HG--
branch : moe
extra : convert_revision : svn%3A2d28d66d-8d94-df11-8c86-00306ef368cb/trunk/moe%40346

--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -1227,6 +1227,10 @@ ul#post-list-posts li {
   list-style-type: none;
 }
 
+img.preview {
+        vertical-align: top;
+}
+
 a.directlink {
         background: #555 url("/images/ddl.gif") no-repeat scroll center center;
         display: block;
@@ -1306,6 +1310,13 @@ a.directlink:hover > .directlink-info {
 .post-hover-overlay {
 	position: absolute;
 	z-index: 2; /* over the regular post images */
+}
+.post-hover-overlay > img {
+        vertical-align: top;
+        border-width: 0 2px 2px 2px;
+        border-style: solid;
+        border-color: #000;
+        margin-left: -2px;
 }
 
 .clickable { cursor: pointer; }
